--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -43,8 +43,8 @@ jobs:
       uses: github/codeql-action/init@cdf3c9d01ea4271265ccbc19e40da0956d2ad492
       with:
         languages: ${{ matrix.language }}
+        config-file: ./.github/codeql/config.yml
         debug: true
-        queries: security-and-quality
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@cdf3c9d01ea4271265ccbc19e40da0956d2ad492
