testing github actions

--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -1,7 +1,9 @@
 name: "CodeQL config"
+packs:
+  - uses: Actions
 queries: 
   - javascript:
-    - uses: security-all
+    - uses: security-and-quality
     # - name: Run custom queries
     #   uses: ./.github/codeql/queries
 paths:
