--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -4,7 +4,7 @@ name: "CodeQL config"
 queries: 
   - javascript:
     #- uses: security-and-quality
-    - uses: github/codeql/javascript/ql/src/experimental/Security
+    - uses: ./.github/codeql/queries/experimental/Security
     # - name: Run custom queries
     #   uses: ./.github/codeql/queries
 paths:
