testing github actions

--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -1,12 +1,9 @@
 name: "CodeQL config"
 
 queries: 
-  #- javascript:
-    #- uses: security-and-quality
+  - uses: security-and-quality
   - uses: github/codeql/javascript/ql/src/experimental/semmle@413c0a8f4f180370afee977d286b68e27bda21e5
-    # - name: Run custom queries
-  #- uses: ./.github/codeql/queries/experimental/semmle
+
 paths:
   - .github
-  - .codeql
   - fastlane
