testing github actions

--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -1,7 +1,7 @@
 name: "CodeQL config"
 
 queries: 
-  #- uses: security-and-quality
+  - uses: security-and-quality
   - uses: github/codeql/javascript/ql/src/experimental/Security@413c0a8f4f180370afee977d286b68e27bda21e5
 
 paths:
