--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches: 
       - main
-  #pull_request:
+  pull_request:
     # The branches below must be a subset of the branches above
-    #branches: [ main ]
+    branches: [ main ]
   schedule:
     #        ┌───────────── minute (0 - 59)
     #        │  ┌───────────── hour (0 - 23)
