--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -1,189 +1,66 @@
-name: Build and Unit Tests
+name: UnitTest
 on: 
-  push:
-  workflow_call:
+  pull_request: 
+    branches:      
+      - main      
+      - dev-preview
 
 permissions:
-  contents: read 
+    contents: read 
 
 concurrency:
-  # Cancel any running unit tests on the same branch
-  group: ${{ github.ref }}-unittests
+  group: ${{ github.head_ref || github.run_id }}
   cancel-in-progress: true
 
 jobs:
-  build-test-amplify:
+
+  amplify-unit-test:
     runs-on: macos-latest
     environment: UnitTest
     steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      - uses: actions/checkout@v2
+      - name: Run unit test
+        uses: ./.github/composite_actions/run_xcodebuild_test
         with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: .
-          workspace: Amplify.xcworkspace
           scheme: Amplify
 
-  build-amplify-spm:
+  api-unit-test:
     runs-on: macos-latest
     environment: UnitTest
     steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      - uses: actions/checkout@v2
+      - name: Run unit test
+        uses: ./.github/composite_actions/run_xcodebuild_test
         with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
+          scheme: AWSAPIPlugin  
 
-      - name: Build Amplify SPM
-        uses: ./.github/composite_actions/run_xcodebuild
-        with:
-          project_path: ./.swiftpm/xcode
-          workspace: package.xcworkspace
-          scheme: Amplify-Package
-  
-  unit-test-plugins-core:
+  auth-unit-test:
     runs-on: macos-latest
     environment: UnitTest
     steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      - uses: actions/checkout@v2
+      - name: Run unit test
+        uses: ./.github/composite_actions/run_xcodebuild_test
         with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: .
-          workspace: Amplify.xcworkspace
-          scheme: AWSPluginsCore
-
-  unit-test-analytics:
-    runs-on: macos-latest
-    environment: UnitTest
-    steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-        with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/Analytics/
-          workspace: AnalyticsCategoryPlugin.xcworkspace
-          scheme: AWSPinpointAnalyticsPlugin
-          
-  unit-test-api:
-    runs-on: macos-latest
-    environment: UnitTest
-    steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-        with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/API/
-          workspace: APICategoryPlugin.xcworkspace
-          scheme: AWSAPICategoryPlugin
-
-  unit-test-auth:
-    runs-on: macos-latest
-    environment: UnitTest
-    steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-        with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/Auth/
-          workspace: AWSCognitoAuthPlugin.xcworkspace
           scheme: AWSCognitoAuthPlugin
 
-  unit-test-datastore:
+  datastore-unit-test:
     runs-on: macos-latest
     environment: UnitTest
     steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      - uses: actions/checkout@v2
+      - name: Run unit test
+        uses: ./.github/composite_actions/run_xcodebuild_test
         with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/DataStore/
-          workspace: DataStoreCategoryPlugin.xcworkspace
-          scheme: AWSDataStoreCategoryPlugin
-
-  unit-test-geo:
-    runs-on: macos-latest
-    environment: UnitTest
-    steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-        with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/Geo/
-          workspace: GeoCategoryPlugin.xcworkspace
-          scheme: AWSLocationGeoPlugin
+          scheme: AWSDataStorePlugin
   
-  unit-test-predictions:
+  storage-unit-test:
     runs-on: macos-latest
     environment: UnitTest
     steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      - uses: actions/checkout@v2
+      - name: Run unit test
+        uses: ./.github/composite_actions/run_xcodebuild_test
         with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/Predictions/
-          workspace: PredictionsCategoryPlugin.xcworkspace
-          scheme: AWSPredictionsPlugin
-
-  unit-test-predictions-core-ml:
-    runs-on: macos-latest
-    environment: UnitTest
-    steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-        with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/Predictions/
-          workspace: PredictionsCategoryPlugin.xcworkspace
-          scheme: CoreMLPredictionsPlugin
-
-  unit-test-storage:
-    runs-on: macos-latest
-    environment: UnitTest
-    steps:
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-        with:
-          ref: ${{ github.ref }}
-          persist-credentials: false
-
-      - name: Run Unit test
-        uses: ./.github/composite_actions/run_xcodebuild_test_cp
-        with:
-          project_path: ./AmplifyPlugins/Storage/
-          workspace: StoragePlugin.xcworkspace
-          scheme: AWSS3StoragePlugin
+          scheme: AWSS3StoragePlugin  
+    
