--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,21 +1,27 @@
+# Pushes main to release branch to kick-off the CircleCI release workflow
+
 name: Release Amplify iOS 
 
 on:
+  push:
+    branches: 
+      - chore/gha-release-kickoff # remove this after first run
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
-  unit-tests:
-    permissions:
-      contents: read
+  release:
+    name: Release
+    environment: Release
+    runs-on: macos-latest
 
-    uses: ./.github/workflows/unittest.yml
+    steps:
+      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
-  fastlane:
-    permissions:
-      contents: write
-
-    needs: unit-tests
-
-    uses: ./.github/workflows/fastlane.yml
-    with:
-      lane: release
+      - name: Push main to release branch
+        run: git push origin main:ameter/test-release    # will change to release
