--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           persist-credentials: true
           fetch-depth: 0
+      
+      - name: Fetch from origin
+        run: git fetch origin
 
       - name: Push main to release branch
         run: git push origin main:ameter/test-release    # will change to release
