--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,4 @@
 # Pushes main to release branch to kick-off the CircleCI release workflow
-
 name: Release Amplify iOS 
 
 on:
@@ -25,6 +24,11 @@ jobs:
       
       - name: Fetch from origin
         run: git fetch origin
+
+      - name: Sync 'main'
+        run: |
+          git checkout main
+          git pull --ff-only origin
 
       - name: Push main to release branch
         run: git push origin main:ameter/test-release    # will change to release
