testing github actions to kickoff CircleCI release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,4 +31,4 @@ jobs:
       #     git pull --ff-only origin
 
       - name: Push main to release branch
-        run: git push origin main:ameter/test-release    # will change to release
+        run: git push origin origin/main:ameter/test-release    # will change to release
