--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,8 +22,8 @@ jobs:
           persist-credentials: true
           fetch-depth: 0
       
-      - name: Fetch from origin
-        run: git fetch origin
+      # - name: Fetch from origin
+      #   run: git fetch origin
 
       # - name: Sync 'main'
       #   run: |
