--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      # - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
-      #   with:
-      #     persist-credentials: true
-      #     fetch-depth: 0
+      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: Push main to release branch
         run: git push origin origin/main:ameter/test-release # will change to release after testing
