--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,4 +27,6 @@ jobs:
       #   run: git push origin origin/main:ameter/test-release-clean # will change to release after testing
 
       - name: Create PR to push main to release branch
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: "gh pr create --title 'chore: kickoff rlease' --body 'kickoff release' --head origin/main --base test-release-clean"
