--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Create PR to push main to release branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: "gh pr create --title 'chore: kickoff rlease' --body 'kickoff release' --head origin/main --base test-release-clean"
+        run: "gh pr create --title 'chore: kickoff rlease' --body 'kickoff release' --head origin/main --base ameter/test-release-clean"
