testing kickoff release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,8 +9,6 @@ on:
 
 permissions:
   contents: write
-  pull-requests: write
-  id-token: write
 
 jobs:
   release:
@@ -23,10 +21,5 @@ jobs:
           persist-credentials: true
           fetch-depth: 0
 
-      # - name: Push main to release branch
-      #   run: git push origin origin/main:ameter/test-release-clean # will change to release after testing
-
-      - name: Create PR to push main to release branch
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: "gh pr create --title 'chore: kickoff rlease' --body 'kickoff release' --head origin/main --base ameter/test-release-clean"
+      - name: Push main to release branch
+        run: "gh pr create --title 'chore: kickoff rlease' --body 'kickoff release' --head main --base ameter/test-release-clean" # will change to release after testing
