--- a/.github/workflows/check_release.yml
+++ b/.github/workflows/check_release.yml
@@ -19,29 +19,31 @@ jobs:
         shell: bash
         env:
           HEAD_REF: ${{ github.head_ref }}
-        if: ${{ env.HEAD_REF != 'chore/gha-release-pr-check' }} # will change to main after testing
+        if: ${{ env.HEAD_REF != 'main' }}
         run: |
           echo
           echo Invalid head ref!
           echo PRs targeting the release branch must have a head ref of 'main'.
           echo Current head ref: \'$GITHUB_HEAD_REF\'
+          exit 1
 
       - name: "Verify title is 'chore: kickoff release'" 
         shell: bash
         env:
           TITLE: ${{ github.event.pull_request.title }}
-        if: ${{ env.TITLE != 'testing' }} # will change to 'chore: kickoff release'
+        if: "${{ env.TITLE != 'chore: kickoff release' }}"
         run: |
           echo
           echo Invalid title!
           echo PRs targeting the release branch must have the title 'chore: kickoff rlease'
           echo Current title: \'$TITLE\'
+          exit 1
       
       - name: "Verify actor is '?'" 
         shell: bash
         env:
           ACTOR: ${{ github.actor }}
-        if: ${{ env.ACTOR != 'ameter' }} # will change to '?'
+        if: ${{ env.ACTOR != 'blah' }} # will change to '?'
         run: |
           echo
           echo Invalid actor!
