--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Create PR to push main to release branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: "gh pr create --title 'chore: kickoff rlease' --body 'kickoff release' --head main --base ameter/test-release-clean" # will change to release after testing
+        run: "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base ameter/test-release-clean" # will change to release after testing
