--- a/.github/workflows/block_manual_pr_release.yml
+++ b/.github/workflows/block_manual_pr_release.yml
@@ -25,11 +25,12 @@ jobs:
           echo Invalid PR!
           echo PRs targeting the release branch must be created by the GHA release workflow.
           echo Current actor: \'$ACTOR\'
-          exit 1
 
       - name: Close PR
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REF: ${{ github.ref }}
-        run: gh pr close $REF
+        run: |
+          gh pr close $REF
+          exit 1
