--- a/.github/workflows/block_manual_pr_release.yml
+++ b/.github/workflows/block_manual_pr_release.yml
@@ -16,15 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:      
-      - name: Fail PR Check
-        shell: bash
-        env:
-          ACTOR: ${{ github.actor }}
-        run: |
-          echo
-          echo Invalid PR!
-          echo PRs targeting the release branch must be created by the GHA release workflow.
-          echo Current actor: \'$ACTOR\'
+      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+        with:
+          persist-credentials: true
 
       - name: Close PR
         shell: bash
@@ -32,5 +26,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REF: ${{ github.ref }}
         run: |
-          gh pr close $REF
-          exit 1
+          gh pr close --comment "Invalid PR!\nPRs targeting the release branch must be created by the GHA release workflow." $REF
+
