--- a/.github/workflows/block_manual_pr_release.yml
+++ b/.github/workflows/block_manual_pr_release.yml
@@ -26,4 +26,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
         run: |
-          gh pr close $PR_NUMBER --comment "Invalid PR! PRs targeting the release branch must be created by the GHA release workflow."
+          gh pr close $PR_NUMBER --comment "Invalid PR!  PRs targeting the release branch must be created by the GHA release workflow."
+          exit 1
