--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,4 +18,6 @@ jobs:
       - name: Create PR to push main to release branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base ameter/test-release-clean" # will change to release after testing
+        run: |
+          "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base ameter/test-release-clean" # will change to release after testing
+          "gh pr merge --auto"
