testing release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,5 +19,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base ameter/test-release-clean" # will change to release after testing
-          "gh pr merge --auto"
+          "PR_URL=`gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base release`"
+          "gh pr merge $PR_URL --auto --merge --subject 'chore: kickoff release' --body ''
+          
