--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,4 +20,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           echo "PR_URL=$(gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base release)"
-          "gh pr merge $PR_URL --auto --merge --subject 'chore: kickoff release' --body ''"
+          gh pr merge $PR_URL --auto --merge --subject 'chore: kickoff release' --body ''
