--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,4 @@ jobs:
       - name: Create PR to push main to release branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          echo "PR_URL=$(gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base release)"
-          gh pr merge $PR_URL --auto --merge --subject 'chore: kickoff release' --body ''
+        run: "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base release"
