testing release workflow

--- a/.github/workflows/merge_release_pr.yml
+++ b/.github/workflows/merge_release_pr.yml
@@ -22,5 +22,7 @@ jobs:
           TITLE: ${{ github.event.pull_request.title }}
           EXPECTED_HEAD: "main"
           EXPECTED_TITLE: "chore: kickoff release"
-        if: ${{ env.HEAD_REF == env.EXPECTED_HEAD && env.TITLE == env.EXPECTED_TITLE && github.event.review.state == 'approved' }}
+        if: ${{ github.event.review.state == 'approved' }}
         run: "gh pr merge $PR_URL --merge --subject 'chore: kickoff release' --body ''"
+
+# env.HEAD_REF == env.EXPECTED_HEAD && env.TITLE == env.EXPECTED_TITLE && 
