testing release workflow

--- a/.github/workflows/merge_release_pr.yml
+++ b/.github/workflows/merge_release_pr.yml
@@ -23,9 +23,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HEAD_REF: ${{ github.head_ref }}
           TITLE: ${{ github.event.pull_request.title }}
+          PR: ${{ github.event.pull_request.number }}
           EXPECTED_HEAD: "main"
           EXPECTED_TITLE: "chore: kickoff release"
         if: ${{ github.event.review.state == 'approved' }}
-        run: "gh pr merge $PR_URL --merge --subject 'chore: kickoff release' --body ''"
+        run: "gh pr merge $PR --merge --subject 'chore: kickoff release' --body ''"
 
 # env.HEAD_REF == env.EXPECTED_HEAD && env.TITLE == env.EXPECTED_TITLE && 
