--- a/.github/workflows/merge_release_pr.yml
+++ b/.github/workflows/merge_release_pr.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - release
 
-permissions:
-  pull-requests: write
+# permissions:
+#   pull-requests: write
 
 jobs:
   check:
