--- a/.github/workflows/release_merge_pr.yml
+++ b/.github/workflows/release_merge_pr.yml
@@ -15,24 +15,36 @@ jobs:
   check:
     name: Merge PR
     runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      BASE_REF: ${{ github.event.pull_request.base.ref }}
+      HEAD_REF: ${{ github.pull_request.event.head.ref }}
+      TITLE: ${{ github.event.pull_request.title }}
+      PR: ${{ github.event.pull_request.number }}
+      EXPECTED_BASE: "release"
+      EXPECTED_HEAD: "main"
+      EXPECTED_TITLE: "chore: kickoff release"
 
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
       - name: Validate PR and Merge
         shell: bash
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          HEAD_REF: ${{ github.head_ref }}
-          TITLE: ${{ github.event.pull_request.title }}
-          PR: ${{ github.event.pull_request.number }}
-          EXPECTED_HEAD: "main"
-          EXPECTED_TITLE: "chore: kickoff release"
-        if: ${{ github.event.review.state == 'approved' }} && ${{ env.HEAD_REF == env.EXPECTED_HEAD }} && ${{ env.TITLE == env.EXPECTED_TITLE }}
+        # env:
+        #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   BASE_REF: ${{ github.event.pull_request.base.ref }}
+        #   HEAD_REF: ${{ github.pull_request.event.head.ref }}
+        #   TITLE: ${{ github.event.pull_request.title }}
+        #   PR: ${{ github.event.pull_request.number }}
+        #   EXPECTED_HEAD: "main"
+        #   EXPECTED_TITLE: "chore: kickoff release"
+        # if: ${{ github.event.review.state == 'approved' }} && ${{ env.HEAD_REF == env.EXPECTED_HEAD }} && ${{ env.TITLE == env.EXPECTED_TITLE }}
         run: | #"gh pr merge $PR --merge --subject 'chore: kickoff release' --body ''"
+          echo BASE_REF: $BASE_REF
           echo HEAD_REF: $HEAD_REF
           echo TITLE: $TITLE
           echo PR: $PR
+          EXPECTED_BASE: $EXPECTED_BASE
           echo EXPECTED_HEAD: $EXPECTED_HEAD
           echo EXPECTED_TITLE: $EXPECTED_TITLE
 
