--- a/.github/workflows/release_merge_pr.yml
+++ b/.github/workflows/release_merge_pr.yml
@@ -22,7 +22,7 @@ jobs:
       EXPECTED_BASE: "release"
       EXPECTED_HEAD: "main"
       EXPECTED_TITLE: "chore: kickoff release"
-    if: ${{ github.event.review.state == 'approved' }} && ${{ env.BASE_REF == env.EXPECTED_BASE }} && ${{ env.HEAD_REF == env.EXPECTED_HEAD }} && ${{ env.TITLE == env.EXPECTED_TITLE }}
+    if: ${{ env.BASE_REF == env.EXPECTED_BASE }}
 
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
