--- a/.github/workflows/release_merge_pr.yml
+++ b/.github/workflows/release_merge_pr.yml
@@ -22,7 +22,7 @@ jobs:
       EXPECTED_BASE: "release"
       EXPECTED_HEAD: "main"
       EXPECTED_TITLE: "chore: kickoff release"
-    if: ${{ github.event.review.state == 'approved' }} && ${{ github.event.pull_request.base.ref == 'testing' }}
+    if: ${{ github.event.review.state == 'approved' }}
 
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
@@ -46,4 +46,5 @@ jobs:
           echo EXPECTED_BASE: $EXPECTED_BASE
           echo EXPECTED_HEAD: $EXPECTED_HEAD
           echo EXPECTED_TITLE: $EXPECTED_TITLE
+          echo ${{ github.event.review.state }}
 
