--- a/.github/workflows/release_kickoff.yml
+++ b/.github/workflows/release_kickoff.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Create PR to push main to release branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head testing --base main"
+        run: "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base release"
