--- a/.github/workflows/release_merge_pr.yml
+++ b/.github/workflows/release_merge_pr.yml
@@ -16,13 +16,13 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       BASE_REF: ${{ github.event.pull_request.base.ref }}
-      HEAD_REF: ${{ github.event.pull_request.event.head.ref }}
+      HEAD_REF: ${{ github.event.pull_request.head.ref }}
       TITLE: ${{ github.event.pull_request.title }}
       PR: ${{ github.event.pull_request.number }}
       EXPECTED_BASE: "release"
       EXPECTED_HEAD: "main"
       EXPECTED_TITLE: "chore: kickoff release"
-    if: ${{ github.event.pull_request.base.ref == 'release' && github.event.review.state == 'approved' }}
+    if: "${{ github.event.pull_request.base.ref == 'release' && github.event.pull_request.head.ref == 'main' && github.event.pull_request.title == 'chore: kickoff release' && github.event.review.state == 'approved' }}"
     
     steps:
       - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
