--- a/.github/workflows/release_kickoff.yml
+++ b/.github/workflows/release_kickoff.yml
@@ -13,7 +13,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+
       - name: Create PR to push main to release branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: "gh pr create --repo ameter/github-actions-test --title 'chore: kickoff release' --body 'kickoff release' --head main --base release"
+        run: "gh pr create --title 'chore: kickoff release' --body 'kickoff release' --head main --base release"
