--- a/.github/workflows/release_block_manual_pr.yml
+++ b/.github/workflows/release_block_manual_pr.yml
@@ -4,7 +4,7 @@ name: Block Manual PR to Release
 on:
   pull_request:
     branches:
-      - ameter/test-release-clean  # will change to release after testing
+      - release
 
 permissions:
   pull-requests: write
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:      
-      - uses: actions/checkout@a12a3943b4bdde767164f792f33f40b04645d846
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b
 
       - name: Close PR
         shell: bash
