--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -2,6 +2,7 @@ name: "CodeQL config"
 
 queries: 
   - uses: security-and-quality
+  - uses: github/codeql/javascript/ql/src/Security
   # - uses: github/codeql/javascript/ql/src/experimental/Security@413c0a8f4f180370afee977d286b68e27bda21e5
 
 paths:
