--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -2,7 +2,8 @@ name: "CodeQL config"
 
 queries: 
   - uses: security-and-quality
-  - uses: github/codeql/javascript/ql/src/Security
+  - uses: security-extended
+  - uses: github/codeql/javascript/ql/src/Security@6cfd790cda9eb90089acf7311259bfdb8cb7d22b
   # - uses: github/codeql/javascript/ql/src/experimental/Security@413c0a8f4f180370afee977d286b68e27bda21e5
 
 paths:
