--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -1,11 +1,11 @@
 name: "CodeQL config"
 
 queries: 
-  # - uses: security-and-quality
-  - uses: ./.github/codeql/queries/CodeInjection.ql
+  - uses: security-and-quality
+  # - uses: ./.github/codeql/queries/CodeInjection.ql
   # - uses: ./.github/codeql/queries/ExpressionInjection.ql
-  - uses: ./.github/codeql/queries/ImproperCodeSanitization.ql
-  - uses: ./.github/codeql/queries/UnsafeCodeConstruction.ql
+  # - uses: ./.github/codeql/queries/ImproperCodeSanitization.ql
+  # - uses: ./.github/codeql/queries/UnsafeCodeConstruction.ql
   
   # - uses: github/codeql/javascript/ql/src/Security/CWE-094@6cfd790cda9eb90089acf7311259bfdb8cb7d22b
   # - uses: github/codeql/javascript/ql/src/experimental/Security@413c0a8f4f180370afee977d286b68e27bda21e5
