--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -3,7 +3,7 @@ name: "CodeQL config"
 queries: 
   - uses: security-and-quality
   # - uses: ./.github/codeql/queries/CodeInjection.ql
-  # - uses: ./.github/codeql/queries/ExpressionInjection.ql
+  - uses: ./.github/codeql/queries/ExpressionInjection.ql
   # - uses: ./.github/codeql/queries/ImproperCodeSanitization.ql
   # - uses: ./.github/codeql/queries/UnsafeCodeConstruction.ql
   
