--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -40,12 +40,17 @@ jobs:
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@cdf3c9d01ea4271265ccbc19e40da0956d2ad492
+      uses: github/codeql-action/init@822fe5ef9a15bd752ef127e9ff6eac38ec37dd9c
       with:
         languages: ${{ matrix.language }}
         config-file: ./.github/codeql/config.yml
         debug: true
 
+    # Autobuild attempts to build any compiled languages (C/C++, C#, or Java).
+    # If this step fails, then you should remove it and run the build manually (see below).
+    - name: Autobuild
+      uses: github/codeql-action/autobuild@822fe5ef9a15bd752ef127e9ff6eac38ec37dd9c
+
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@cdf3c9d01ea4271265ccbc19e40da0956d2ad492
+      uses: github/codeql-action/analyze@822fe5ef9a15bd752ef127e9ff6eac38ec37dd9c
 
