--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -2,6 +2,7 @@ name: "CodeQL config"
 
 queries: 
   - uses: security-and-quality
+  - uses: security-extended
   # - uses: ./.github/codeql/queries/CodeInjection.ql
   # - uses: ./.github/codeql/queries/ExpressionInjection.ql
   # - uses: ./.github/codeql/queries/ImproperCodeSanitization.ql
