--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -1,8 +1,8 @@
 name: "CodeQL config"
 
 queries: 
-  # - uses: security-and-quality
-  - uses: ./.github/codeql/queries/javascript/ql/src/ExpressionInjection.ql
+  # - uses: ./.github/codeql/queries/javascript/ql/src/Security/CWE-094/ExpressionInjection.ql
+  - uses: github/codeql/javascript/ql/src/Security/CWE-094/ExpressionInjection.ql
 
 paths:
   - .github
