--- a/.github/codeql/config.yml
+++ b/.github/codeql/config.yml
@@ -2,7 +2,7 @@ name: "CodeQL config"
 
 queries: 
   # - uses: ./.github/codeql/queries/javascript/ql/src/Security/CWE-094/ExpressionInjection.ql
-  - uses: github/codeql/javascript/ql/src/Security/CWE-094/ExpressionInjection.ql@codeql-cli/v2.9.3 
+  - uses: github/codeql/javascript/ql/src/Security/CWE-094/ExpressionInjection.ql@8cd261af0ed7edb7cd6b8ea6a0ffd99033b79783
 
 paths:
   - .github
