move unit tests runs-on to workflow level and set to macos-12

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -5,6 +5,8 @@ on:
       - main      
       - dev-preview
 
+runs-on: macos-12
+
 permissions:
     contents: read 
 
@@ -15,7 +17,6 @@ concurrency:
 jobs:
 
   amplify-unit-test:
-    runs-on: macos-latest
     environment: UnitTest
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +26,6 @@ jobs:
           scheme: Amplify
 
   api-unit-test:
-    runs-on: macos-latest
     environment: UnitTest
     steps:
       - uses: actions/checkout@v2
@@ -35,7 +35,6 @@ jobs:
           scheme: AWSAPIPlugin  
 
   auth-unit-test:
-    runs-on: macos-latest
     environment: UnitTest
     steps:
       - uses: actions/checkout@v2
@@ -45,7 +44,6 @@ jobs:
           scheme: AWSCognitoAuthPlugin
 
   datastore-unit-test:
-    runs-on: macos-latest
     environment: UnitTest
     steps:
       - uses: actions/checkout@v2
@@ -55,7 +53,6 @@ jobs:
           scheme: AWSDataStorePlugin
   
   storage-unit-test:
-    runs-on: macos-latest
     environment: UnitTest
     steps:
       - uses: actions/checkout@v2
